data/derived/fa15/progs/unify/prog0235.ml.out
Characters 69-72:
  | (h,t) -> if t = false then f t;;
                               ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type unit
